merged trunk core/compiletime revision 3326-3520 into Starlight branch